--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Anular.cshtml
@@ -82,7 +82,7 @@
 
                    //Campo ID
                    settings.Properties.ValueField = "IdRubro";
-                   settings.Properties.ValueType = typeof(decimal);
+                   settings.Properties.ValueType = typeof(string);
                    settings.Properties.TextField = "ru_descripcion";
                    //Boton para seleccionar ningun registro
                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
