--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Nuevo.cshtml
@@ -77,7 +77,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCblePadre">Rubro*</label>
+                    <label for="IdRubro">Rubro*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdRubro, settings =>
                {
                    settings.Name = "IdRubro";
@@ -89,7 +89,7 @@
 
                    //Campo ID
                    settings.Properties.ValueField = "IdRubro";
-                   settings.Properties.ValueType = typeof(decimal);
+                   settings.Properties.ValueType = typeof(string);
                    settings.Properties.TextField = "ru_descripcion";
                    //Boton para seleccionar ningun registro
                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
@@ -192,7 +192,7 @@
             <div class="col-md-12">
 
                 <div class="form-group">
-                    <label for="Valor">Detalle prestamos*</label>
+                    <label for="GridViewPartial_prestamos_det">Detalle prestamos*</label>
                     @Html.Action("GridViewPartial_prestamos_det")
 
                 </div>
