--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Index2.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Index2.cshtml
@@ -1,12 +1,12 @@
 ﻿
 @{
-    ViewBag.Title = "Marcaciones";
+    ViewBag.Title = "Nóminas procesadas/Cerrada/Contabilizadas";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
     }
 }
-
 @using (Html.BeginForm())
 {
+    @Html.Action("GridViewPartial_nominas_cerradas")
 }
