--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_ro_rol.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_ro_rol.cshtml
@@ -51,17 +51,24 @@
             //    e.Row.ForeColor = System.Drawing.Color.Red;
             //}
         };
+
+
         settings.Columns.Add(c =>
         {
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
 
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Reprocesar", "Modificar", new { IdNomina_Tipo = DataBinder.Eval(tc.DataItem, "IdNomina_Tipo"), IdNomina_TipoLiqui = DataBinder.Eval(tc.DataItem, "IdNomina_TipoLiqui") , IdPeriodo = DataBinder.Eval(tc.DataItem, "IdPeriodo") },
-                        new { onclick = "return confirm('¿Está seguro de que desea reprocesar la nómina?')" })
-                );
 
+                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Cerrado")) == "N" & Convert.ToString(DataBinder.Eval(tc.DataItem, "Contabilizado")) == "N")
+                {
+
+                    ViewContext.Writer.Write(
+                    Html.ActionLink("Reprocesar", "Modificar", new { IdNomina_Tipo = DataBinder.Eval(tc.DataItem, "IdNomina_Tipo"), IdNomina_TipoLiqui = DataBinder.Eval(tc.DataItem, "IdNomina_TipoLiqui"), IdPeriodo = DataBinder.Eval(tc.DataItem, "IdPeriodo") },
+                        new { onclick = "return confirm('¿Está seguro de que desea reprocesar la nómina?')" })
+                        );
+
+                }
             });
             c.SetHeaderTemplateContent(tc =>
             {
@@ -71,17 +78,76 @@
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
-            c.Width = Unit.Pixel(150);
+            c.Width = Unit.Pixel(100);
+        });
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "#";
+            column.Width = Unit.Pixel(100);
+            column.SetDataItemTemplateContent(container =>
+            {
+                if (Convert.ToString(DataBinder.Eval(container.DataItem, "Cerrado")) == "N")
+                {
+
+                    Html.DevExpress().HyperLink(hyperlink =>
+                    {
+                        var IdNomina_Tipo = DataBinder.Eval(container.DataItem, "IdNomina_Tipo");
+                        var IdNomina_TipoLiqui = DataBinder.Eval(container.DataItem, "IdNomina_TipoLiqui");
+                        var IdPeriodo = DataBinder.Eval(container.DataItem, "IdPeriodo");
+                        hyperlink.Properties.Text = "Cerrar rol";
+                        hyperlink.NavigateUrl = Url.Action("CerrarPeriodo", "ProcesarRol", new { IdNomina_Tipo = IdNomina_Tipo, IdNomina_TipoLiqui = IdNomina_TipoLiqui, IdPeriodo = IdPeriodo });
+                    }).Render();
+
+                }
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "#";
+            column.Width = Unit.Pixel(100);
+            column.SetDataItemTemplateContent(container =>
+            {
+                if (Convert.ToString(DataBinder.Eval(container.DataItem, "Contabilizado")) == "N")
+                {
+
+                    Html.DevExpress().HyperLink(hyperlink =>
+                    {
+                        var IdNomina_Tipo = DataBinder.Eval(container.DataItem, "IdNomina_Tipo");
+                        var IdNomina_TipoLiqui = DataBinder.Eval(container.DataItem, "IdNomina_TipoLiqui");
+                        var IdPeriodo = DataBinder.Eval(container.DataItem, "IdPeriodo");
+                        hyperlink.Properties.Text = "contabilizar";
+                        hyperlink.NavigateUrl = Url.Action("ContabilizarPeriodo", "ProcesarRol", new { IdNomina_Tipo = IdNomina_Tipo, IdNomina_TipoLiqui = IdNomina_TipoLiqui, IdPeriodo = IdPeriodo });
+                    }).Render();
+
+                }
+
+            });
         });
 
+        settings.Columns.Add("Descripcion","Nómina").Width=Unit.Percentage(8);
+        settings.Columns.Add("DescripcionProcesoNomina","Proceso").Width = Unit.Percentage(15);
+        settings.Columns.Add("IdPeriodo").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pe_FechaIni";
+            column.Caption = "Desde";
+            column.Width = Unit.Percentage(8);
+            column.PropertiesEdit.DisplayFormatString = "d";
+
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pe_FechaFin";
+            column.Caption = "Hasta";
+            column.Width = Unit.Percentage(8);
+            column.PropertiesEdit.DisplayFormatString = "d";
+
+        });
+        settings.Columns.Add("Procesado","Procesado").Width=Unit.Percentage(7);
+        settings.Columns.Add("Cerrado","Cerrado").Width = Unit.Percentage(5);
+        settings.Columns.Add("Contabilizado","Contabilizado").Width = Unit.Percentage(8);
 
 
-        settings.Columns.Add("IdNomina_Tipo");
-        settings.Columns.Add("IdNomina_TipoLiqui");
-        settings.Columns.Add("IdPeriodo");
-        settings.Columns.Add("Descripcion");
-        settings.Columns.Add("Observacion");
-        settings.Columns.Add("Cerrado");
     });
 }
 @grid.Bind(Model).GetHtml()
