--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Shared/_Layout.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Shared/_Layout.cshtml
@@ -215,6 +215,7 @@
                                     <li><a href="@Url.Action("Index2","HorasExtras",new { area = "RRHH"})"><i class="fa fa-circle-o"></i>Aprobar H.E.</a></li>
                                     <li><a href="@Url.Action("Index","ParticipacionUtilidad",new { area = "RRHH"})"><i class="fa fa-circle-o"></i>Reparto utilidad</a></li>
                                     <li><a href="@Url.Action("Index","ProcesarRol",new { area = "RRHH"})"><i class="fa fa-circle-o"></i> Procesar rol </a></li>
+                                    <li><a href="@Url.Action("Index2","ProcesarRol",new { area = "RRHH"})"><i class="fa fa-circle-o"></i>Reversar procesos</a></li>
 
 
                                 </ul>
