--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ActaFiniquito/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ActaFiniquito/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Liquidación empleados";
+    ViewBag.Title = "Actas generadas";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
