--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/Nuevo.cshtml
@@ -25,7 +25,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCblePadre">Empleado*</label>
+                    <label for="IdEmpleado">Empleado*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdEmpleado, settings =>
                {
                    settings.Name = "IdEmpleado";
@@ -54,7 +54,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdContrato_Tipo">Nómina*</label>
+                    <label for="IdNomina_Tipo">Nómina*</label>
                     @Html.DropDownListFor(q => q.IdNomina_Tipo, new SelectList(ViewBag.lst_nomina, "IdNomina_Tipo", "Descripcion"), "== Seleccione ==", new { @class = "form-control", @id = "IdNomina_Tipo" })
                     @Html.ValidationMessageFor(q => q.IdNomina_Tipo, "", new { @class = "text-danger" })
                 </div>
@@ -65,7 +65,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdContrato_Tipo">Tipo liquidación de nómina*</label>
+                    <label for="IdNomina_TipoLiqui">Tipo liquidación de nómina*</label>
                     @Html.DropDownListFor(q => q.IdNomina_TipoLiqui, new SelectList(ViewBag.lst_nomina_tipo, "IdNomina_TipoLiqui", "DescripcionProcesoNomina"), "== Seleccione ==", new { @class = "form-control", @id = "IdNomina_TipoLiqui" })
                     @Html.ValidationMessageFor(q => q.IdNomina_TipoLiqui, "", new { @class = "text-danger" })
                 </div>
@@ -77,7 +77,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="cb_Observacion">Observación</label>
+                    <label for="Observacion">Observación</label>
                     @Html.TextBoxFor(q => q.Observacion, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.Observacion, "", new { @class = "text-danger" })
                 </div>
@@ -89,7 +89,7 @@
         <div class="col-md-4">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="pe_fechaNacimiento">Fecha Novedad*</label>
+                    <label for="Fecha">Fecha Novedad*</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
@@ -105,7 +105,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="cb_Observacion">Detalle de la novedad</label>
+                    <label for="detalle">Detalle de la novedad</label>
                     @Html.Action("GridViewPartial_empleado_novedad_det", new { IdEmpleado = Model.IdEmpleado, IdNovedad = Model.IdNovedad })
                     @Html.ValidationMessageFor(q => q.lst_novedad_det, "", new { @class = "text-danger" })
                 </div>
