--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Modificar.cshtml
@@ -59,6 +59,8 @@
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Procesar</button>
         <a class="btn btn-default" href="@Url.Action("Index","ProcesarRol",new { Area = "RRHH" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("ROL_001","Reportes",new { Area = "RRHH", IdNomina=1,  IdNomiaTipo=2,  IdPeriodo=201803},null)">Cancelar</a>
+
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
